--- a/1_EHR comorbidity analysis/data_preprocessing.ipynb
+++ b/1_EHR comorbidity analysis/data_preprocessing.ipynb
@@ -1,242 +1,11 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 1,
-   "id": "b43bc41e",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "'''\n",
-    "\n",
-    "Cleaning data: Remove patients with missing sex and short EHR observation period (< 1 year)\n",
-    "\n",
-    "'''\n",
-    "\n",
-    "import pandas as pd\n",
-    "import numpy as np\n",
-    "\n",
-    "# --- Load data ---\n",
-    "df_cohort = pd.read_csv('df_cohort.csv', dtype={\n",
-    "    'source_concept_code': str, 'ICDcode': str, 'Phecode': str\n",
-    "})\n",
-    "\n",
-    "demographic_data = pd.read_csv('demographic_dataset.csv')"
-   ]
-  },
-  {
    "cell_type": "markdown",
-   "id": "9547a567",
+   "id": "f7f72317-0149-46ac-b036-42cbc207f02f",
    "metadata": {},
    "source": [
-    "#### Load condition dataframe of patients from age 18-90"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "852fb244",
-   "metadata": {
-    "code_folding": [
-     0
-    ]
-   },
-   "outputs": [],
-   "source": [
-    "## select patients from age 18-90; return dataset_45023455_condition_df\n",
-    "\n",
-    "# This query represents dataset \"whole-cohort-all-condition\" for domain \"condition\" and was generated for All of Us Controlled Tier Dataset v7\n",
-    "dataset_45023455_condition_sql = \"\"\"\n",
-    "    SELECT\n",
-    "        c_occurrence.person_id,\n",
-    "        c_occurrence.condition_concept_id,\n",
-    "        c_standard_concept.concept_name as standard_concept_name,\n",
-    "        c_standard_concept.concept_code as standard_concept_code,\n",
-    "        c_standard_concept.vocabulary_id as standard_vocabulary,\n",
-    "        c_occurrence.condition_start_datetime,\n",
-    "        c_occurrence.condition_end_datetime,\n",
-    "        c_occurrence.condition_type_concept_id,\n",
-    "        c_type.concept_name as condition_type_concept_name,\n",
-    "        c_occurrence.stop_reason,\n",
-    "        c_occurrence.visit_occurrence_id,\n",
-    "        visit.concept_name as visit_occurrence_concept_name,\n",
-    "        c_occurrence.condition_source_value,\n",
-    "        c_occurrence.condition_source_concept_id,\n",
-    "        c_source_concept.concept_name as source_concept_name,\n",
-    "        c_source_concept.concept_code as source_concept_code,\n",
-    "        c_source_concept.vocabulary_id as source_vocabulary,\n",
-    "        c_occurrence.condition_status_source_value,\n",
-    "        c_occurrence.condition_status_concept_id,\n",
-    "        c_status.concept_name as condition_status_concept_name \n",
-    "    FROM\n",
-    "        ( SELECT\n",
-    "            * \n",
-    "        FROM\n",
-    "            `\"\"\" + os.environ[\"WORKSPACE_CDR\"] + \"\"\".condition_occurrence` c_occurrence \n",
-    "        WHERE\n",
-    "            (\n",
-    "                condition_concept_id IN (\n",
-    "                    SELECT\n",
-    "                        DISTINCT c.concept_id \n",
-    "                    FROM\n",
-    "                        `\"\"\" + os.environ[\"WORKSPACE_CDR\"] + \"\"\".cb_criteria` c \n",
-    "                    JOIN\n",
-    "                        (\n",
-    "                            SELECT\n",
-    "                                CAST(cr.id as string) AS id       \n",
-    "                            FROM\n",
-    "                                `\"\"\" + os.environ[\"WORKSPACE_CDR\"] + \"\"\".cb_criteria` cr       \n",
-    "                            WHERE\n",
-    "                                concept_id IN (\n",
-    "                                    137193, 137977, 3663207, 37311320, 4011630, 4021667, 4024705, 4027304, 4041287, 4042140, 40480457, 4070767, 4089228, 4094294, 4132559, 4167864, 4168498, 4172024, 4179304, 4196732, 4213737, 4274025, 4275722, 4297708, 43021226, 4303401, 432453, 433595, 437312, 437382\n",
-    "                                )       \n",
-    "                                AND full_text LIKE '%_rank1]%'      \n",
-    "                        ) a \n",
-    "                            ON (\n",
-    "                                c.path LIKE CONCAT('%.',\n",
-    "                            a.id,\n",
-    "                            '.%') \n",
-    "                            OR c.path LIKE CONCAT('%.',\n",
-    "                            a.id) \n",
-    "                            OR c.path LIKE CONCAT(a.id,\n",
-    "                            '.%') \n",
-    "                            OR c.path = a.id) \n",
-    "                        WHERE\n",
-    "                            is_standard = 1 \n",
-    "                            AND is_selectable = 1\n",
-    "                        )\n",
-    "                )  \n",
-    "                AND (\n",
-    "                    c_occurrence.PERSON_ID IN (\n",
-    "                        SELECT\n",
-    "                            distinct person_id  \n",
-    "                        FROM\n",
-    "                            `\"\"\" + os.environ[\"WORKSPACE_CDR\"] + \"\"\".cb_search_person` cb_search_person  \n",
-    "                        WHERE\n",
-    "                            cb_search_person.person_id IN (\n",
-    "                                SELECT\n",
-    "                                    person_id \n",
-    "                                FROM\n",
-    "                                    `\"\"\" + os.environ[\"WORKSPACE_CDR\"] + \"\"\".cb_search_person` p \n",
-    "                                WHERE\n",
-    "                                    age_at_consent BETWEEN 18 AND 90 \n",
-    "                            ) \n",
-    "                        )\n",
-    "                )\n",
-    "            ) c_occurrence \n",
-    "        LEFT JOIN\n",
-    "            `\"\"\" + os.environ[\"WORKSPACE_CDR\"] + \"\"\".concept` c_standard_concept \n",
-    "                ON c_occurrence.condition_concept_id = c_standard_concept.concept_id \n",
-    "        LEFT JOIN\n",
-    "            `\"\"\" + os.environ[\"WORKSPACE_CDR\"] + \"\"\".concept` c_type \n",
-    "                ON c_occurrence.condition_type_concept_id = c_type.concept_id \n",
-    "        LEFT JOIN\n",
-    "            `\"\"\" + os.environ[\"WORKSPACE_CDR\"] + \"\"\".visit_occurrence` v \n",
-    "                ON c_occurrence.visit_occurrence_id = v.visit_occurrence_id \n",
-    "        LEFT JOIN\n",
-    "            `\"\"\" + os.environ[\"WORKSPACE_CDR\"] + \"\"\".concept` visit \n",
-    "                ON v.visit_concept_id = visit.concept_id \n",
-    "        LEFT JOIN\n",
-    "            `\"\"\" + os.environ[\"WORKSPACE_CDR\"] + \"\"\".concept` c_source_concept \n",
-    "                ON c_occurrence.condition_source_concept_id = c_source_concept.concept_id \n",
-    "        LEFT JOIN\n",
-    "            `\"\"\" + os.environ[\"WORKSPACE_CDR\"] + \"\"\".concept` c_status \n",
-    "                ON c_occurrence.condition_status_concept_id = c_status.concept_id\"\"\"\n",
-    "\n",
-    "dataset_45023455_condition_df = pd.read_gbq(\n",
-    "    dataset_45023455_condition_sql,\n",
-    "    dialect=\"standard\",\n",
-    "    use_bqstorage_api=(\"BIGQUERY_STORAGE_API_ENABLED\" in os.environ),\n",
-    "    progress_bar_type=\"tqdm_notebook\")\n",
-    "\n",
-    "#dataset_45023455_condition_df.head(5)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "5f327fb6",
-   "metadata": {},
-   "source": [
-    "#### Load person dataframe of patients from age 18-90"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 40,
-   "id": "36bbe3a8",
-   "metadata": {
-    "code_folding": []
-   },
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7b5957cdac54400c9ceca0d1539defe9",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Downloading:   0%|          | 0/412573 [00:00<?, ?rows/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "## select patients from age 18-90; return dataset_45023455_person_df\n",
-    "# This query represents dataset \"whole-cohort-all-condition\" for domain \"person\" and was generated for All of Us Controlled Tier Dataset v7\n",
-    "dataset_45023455_person_sql = \"\"\"\n",
-    "    SELECT\n",
-    "        person.person_id,\n",
-    "        person.gender_concept_id,\n",
-    "        p_gender_concept.concept_name as gender,\n",
-    "        person.birth_datetime as date_of_birth,\n",
-    "        person.race_concept_id,\n",
-    "        p_race_concept.concept_name as race,\n",
-    "        person.ethnicity_concept_id,\n",
-    "        p_ethnicity_concept.concept_name as ethnicity,\n",
-    "        person.sex_at_birth_concept_id,\n",
-    "        p_sex_at_birth_concept.concept_name as sex_at_birth \n",
-    "    FROM\n",
-    "        `\"\"\" + os.environ[\"WORKSPACE_CDR\"] + \"\"\".person` person \n",
-    "    LEFT JOIN\n",
-    "        `\"\"\" + os.environ[\"WORKSPACE_CDR\"] + \"\"\".concept` p_gender_concept \n",
-    "            ON person.gender_concept_id = p_gender_concept.concept_id \n",
-    "    LEFT JOIN\n",
-    "        `\"\"\" + os.environ[\"WORKSPACE_CDR\"] + \"\"\".concept` p_race_concept \n",
-    "            ON person.race_concept_id = p_race_concept.concept_id \n",
-    "    LEFT JOIN\n",
-    "        `\"\"\" + os.environ[\"WORKSPACE_CDR\"] + \"\"\".concept` p_ethnicity_concept \n",
-    "            ON person.ethnicity_concept_id = p_ethnicity_concept.concept_id \n",
-    "    LEFT JOIN\n",
-    "        `\"\"\" + os.environ[\"WORKSPACE_CDR\"] + \"\"\".concept` p_sex_at_birth_concept \n",
-    "            ON person.sex_at_birth_concept_id = p_sex_at_birth_concept.concept_id  \n",
-    "    WHERE\n",
-    "        person.PERSON_ID IN (\n",
-    "            SELECT\n",
-    "                distinct person_id  \n",
-    "            FROM\n",
-    "                `\"\"\" + os.environ[\"WORKSPACE_CDR\"] + \"\"\".cb_search_person` cb_search_person  \n",
-    "            WHERE\n",
-    "                cb_search_person.person_id IN (\n",
-    "                    SELECT\n",
-    "                        person_id \n",
-    "                    FROM\n",
-    "                        `\"\"\" + os.environ[\"WORKSPACE_CDR\"] + \"\"\".cb_search_person` p \n",
-    "                    WHERE\n",
-    "                        age_at_consent BETWEEN 18 AND 90 \n",
-    "                ) \n",
-    "            )\"\"\"\n",
-    "\n",
-    "dataset_45023455_person_df = pd.read_gbq(\n",
-    "    dataset_45023455_person_sql,\n",
-    "    dialect=\"standard\",\n",
-    "    use_bqstorage_api=(\"BIGQUERY_STORAGE_API_ENABLED\" in os.environ),\n",
-    "    progress_bar_type=\"tqdm_notebook\")\n",
-    "\n",
-    "#dataset_45023455_person_df.head(5)\n"
+    "Cleaning data: Remove patients with missing sex and short EHR observation period (< 1 year)"
    ]
   },
   {
@@ -246,6 +15,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "\n",
+    "# --- Load data ---\n",
+    "df_cohort = pd.read_csv('df_cohort.csv', dtype={\n",
+    "    'source_concept_code': str, 'ICDcode': str, 'Phecode': str\n",
+    "})\n",
+    "\n",
+    "demographic_data = pd.read_csv('demographic_dataset.csv')\n",
+    "\n",
     "# --- Compute first and last EHR record per person ---\n",
     "\n",
     "df_cohort['condition_start_datetime'] = pd.to_datetime(\n",
@@ -259,7 +38,16 @@
     "\n",
     "df_cohort['length_first_to_last'] = (\n",
     "    (df_cohort['last_EHR'] - df_cohort['first_EHR']).dt.days/365\n",
-    ")\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b81b4786-98f4-4be5-9602-a7505bd07ac3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# --- Filter out patients with less than 1 year of data ---\n",
     "\n",
     "person_ids_to_remove = df_cohort.loc[df_cohort['length_first_to_last'] < 1, 'person_id'].unique()\n",
@@ -269,16 +57,22 @@
     "num_control = df_cohort_filter[df_cohort_filter['HS'] == 0]['person_id'].nunique()\n",
     "\n",
     "print('Number of case patients (HS=1):', num_case)\n",
-    "print('Number of control patients (HS=0):', num_control)\n",
-    "\n",
-    "# --- Add demographic data\n",
-    "\n",
+    "print('Number of control patients (HS=0):', num_control)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "74d18deb-b543-4457-bcb4-96b190a62407",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# --- Add demographic data ---\n",
     "cohort_df= phe_condition_filter_df.merge(demographic_data,on='person_id',how='left')\n",
     "\n",
-    "# --- Calculate age at first visit ---\n",
     "cohort_df['age_first_visit'] = (cohort_df['first_EHR'] - cohort_df['date_of_birth']).dt.days/365\n",
     "\n",
-    "# --- Remove patient sex missing\n",
+    "# --- Remove patient sex missing ---\n",
     "sub_sex = cohort_df_sub[\n",
     "    (cohort_df_sub['sex_at_birth'] == 'PMI: Skip') |\n",
     "    (cohort_df_sub['sex_at_birth'] == 'None')\n",
@@ -291,9 +85,16 @@
     "\n",
     "print('Number of patients in case and control after removing missing sex info:')\n",
     "print('Number of case patients (HS=1):', num_case)\n",
-    "print('Number of control patients (HS=0):', num_control)\n",
-    "\n",
-    "\n",
+    "print('Number of control patients (HS=0):', num_control)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "737fb705-cdd9-4102-b369-35159c814734",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# --- Remove patients with age < 18 or > 90 at last EHR date ---\n",
     "cohort_df['last_EHR'] = pd.to_datetime(cohort_df['last_EHR'], format = 'mixed')\n",
     "cohort_df['date_of_birth'] = pd.to_datetime(cohort_df['date_of_birth'])\n",
@@ -308,28 +109,25 @@
     "\n",
     "age_less_18_over_90 = age_less_18 + age_over_90\n",
     "\n",
-    "# Print counts\n",
     "print('Number of patients less than 18:', len(age_less_18))\n",
     "print('Number of patients over 90:', len(age_over_90))\n",
-    "print('Total removed due to age out of range:', len(age_less_18_over_90))\n",
-    "\n",
-    "# Filter final cohort\n",
-    "cohort_18_to_90_df = cohort_df[~cohort_df['person_id'].isin(age_less_18_over_90)]\n",
-    "# Show result grouped by HS\n",
-    "print('\\nRemaining patients by group (HS):')\n",
-    "print(cohort_18_to_90_df.groupby('HS')['person_id'].nunique())\n",
-    "\n",
-    "cohort_18_to_90_df.to_csv('cohort_18_to_90_df.csv',index=False)"
+    "print('Total removed due to age out of range:', len(age_less_18_over_90))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
-   "id": "2caffe4a",
+   "execution_count": null,
+   "id": "b732a02c-ccac-4b0d-b8a8-0afa05c5b21e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#cohort_df_sub.to_csv('result_v2/case_control_person_df.csv',index=False)"
+    "# --- Filter final cohort ---\n",
+    "cohort_18_to_90_df = cohort_df[~cohort_df['person_id'].isin(age_less_18_over_90)]\n",
+    "\n",
+    "print('\\nRemaining patients by group (HS):')\n",
+    "print(cohort_18_to_90_df.groupby('HS')['person_id'].nunique())\n",
+    "\n",
+    "cohort_18_to_90_df.to_csv('cohort_18_to_90_df.csv',index=False)"
    ]
   }
  ],
